--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BiFET
 Type: Package
 Title: Bias-free Footprint Enrichment Test
-Version: 1.13.0
-Date: 2018-07-10
+Version: 1.13.1
+Date: 2021-07-27
 Authors@R: c(person("Ahrim", "Youn", email = "Ahrim.Youn@jax.org",
     role = c("aut", "cre")), person("Eladio", "Marquez",
     email = "Eladio.Marquez@jax.org", role = c("aut")), 
@@ -28,5 +28,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports: stats, poibin, GenomicRanges
-Suggests: testthat, knitr
+Suggests: rmarkdown, testthat, knitr
 VignetteBuilder: knitr
